# mid_qr_code_lib

./: Cargo.toml  README.md
.github/workflows/: build-wasm.yml  pages.yml  publish-npm.yml
.mdix/: .manifest.mdix
.mdix/project_structure/: project_structure.mdix
crates/mid-qr-core/: Cargo.toml
crates/mid-qr-core/src/: decode.rs  error.rs  generate.rs  lib.rs
crates/mid-qr-wasm/: Cargo.toml
crates/mid-qr-wasm/src/: lib.rs
docs/: api.md  architecture.md  getting-started.md
examples/: generate_samples.rs
npm/: package-lock.json  package.json  rollup.config.js  tsconfig.json
npm/src/: generator.ts  index.ts  scanner.ts  types.ts  utils.ts
npm/src/worker/: qr-scanner.min.d.ts
site/: index.html
src/: lib copy.txt
test/: index.html
tests/: integration.rs
wrappers/blazor/: IMidQrIconProvider.cs  MidQrCode.razor  MidQrCode.razor.cs  MidQrCode.razor.css  MidQrData.cs  MidQrScanner.razor  MidQrScanner.razor.cs  MidQrScanner.razor.css
