[workspace]
members = [
    "crates/mid-qr-core",
    "crates/mid-qr-wasm",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
authors    = ["Mid-D-Man"]
license    = "MIT"
repository = "https://github.com/Mid-D-Man/mid-qr"

# ── Release profile tuned for WASM binary size ──────────────────────────────
[profile.release]
opt-level     = "s"     # size over speed – typical for WASM
lto           = true
codegen-units = 1
panic         = "abort" # no unwinding = smaller WASM
strip         = true
