[package]
name        = "mid-qr-core"
version.workspace = true
edition.workspace = true
description = "Core QR generation and static-image decode logic for mid-qr"

[features]
default  = ["generate", "decode"]
generate = ["dep:qrcode"]
decode   = ["dep:rxing"]

[dependencies]
qrcode = { version = "0.13", optional = true }

# ── rxing pinned to 0.8 ──────────────────────────────────────────────────────
# default-features = false drops the `image` crate dependency, which:
#   • cannot compile to wasm32-unknown-unknown (uses std::fs / native image decoders)
#   • is not needed — we receive raw luma bytes from the JS side
#
# Without the image feature, the correct luminance source is Luma8LuminanceSource.
# BufferedImageLuminanceSource is only available WITH the image feature — that is
# why it was missing from the root; it is feature-gated, not unconditionally exported.
#
# 0.7.0 changed the hints system from HashMap to DecodeHints struct.
# 0.8.x compiles cleanly to wasm32-unknown-unknown with default-features = false.
rxing = { version = "0.8", optional = true, default-features = false }
