[package]
name        = "mid-qr-core"
version.workspace = true
edition.workspace = true
description = "Core QR generation and static-image decode logic for mid-qr"

[features]
default  = ["generate", "decode"]
generate = ["dep:qrcode"]
decode   = ["dep:rxing"]

[dependencies]
qrcode = { version = "0.13", optional = true }

# ── rxing pinned to 0.8 ──────────────────────────────────────────────────────
# default-features = false  → drops the `image` crate (uses std::fs, cannot
#                             compile to wasm32-unknown-unknown).
#
# "encoding_rs"             → REQUIRED.  rxing 0.8 has a compile_error! that
#                             fires unless either "encoding_rs" or
#                             "legacy_encoding" is explicitly enabled.
#                             We choose "encoding_rs" because:
#                               • It is Mozilla's implementation, explicitly
#                                 designed for WASM / no_std / browser use.
#                               • encoding_rs compiles cleanly to
#                                 wasm32-unknown-unknown with no native deps.
#                               • "legacy_encoding" uses the old `encoding`
#                                 crate (0.2) which has known WASM issues.
#
# The two features we are using from rxing:
#   Luma8LuminanceSource  — WASM-safe luminance source (no image crate needed)
#   HybridBinarizer       — standard binarizer, always present
#   MultiFormatReader     — decode any supported format
# All three are available with just "encoding_rs", no other features needed.
rxing = { version = "0.8", optional = true, default-features = false, features = ["encoding_rs"] }
