[package]
name        = "mid-qr-wasm"
version.workspace = true
edition.workspace = true
description = "wasm-bindgen bindings for mid-qr — exposes generate + decode to JavaScript"

[lib]
crate-type = ["cdylib"]

# ── Feature flags mirror mid-qr-core ────────────────────────────────────────
# Disable either to shrink the WASM binary when only one half is needed.
[features]
default  = ["generate", "decode"]
generate = ["mid-qr-core/generate"]
decode   = ["mid-qr-core/decode"]
# Enable in local dev builds only — adds console_error_panic_hook which
# is too large for production WASM.
debug    = ["dep:console_error_panic_hook"]

[dependencies]
mid-qr-core            = { path = "../mid-qr-core" }
wasm-bindgen           = "0.2"
js-sys                 = "0.3"
serde                  = { version = "1", features = ["derive"] }
serde-wasm-bindgen     = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# ── wasm-pack release profile ────────────────────────────────────────────────
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]          # optimise for size after wasm-bindgen output
