[package]
name        = "mid-qr-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for mid-qr"

[lib]
crate-type = ["cdylib"]

[features]
default  = ["generate", "decode"]
generate = ["mid-qr-core/generate"]
decode   = ["mid-qr-core/decode"]
debug    = ["dep:console_error_panic_hook"]

[dependencies]
mid-qr-core              = { path = "../mid-qr-core" }
wasm-bindgen             = "0.2"
js-sys                   = "0.3"
serde                    = { version = "1", features = ["derive"] }
serde-wasm-bindgen       = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# ── wasm-opt config ───────────────────────────────────────────────────────────
# rxing (and encoding_rs) emit bulk-memory instructions (memory.fill,
# memory.copy) which are part of the WebAssembly bulk-memory-operations
# proposal — enabled by default in all modern browsers and in Rust's
# wasm32-unknown-unknown target since 2021.
#
# The version of wasm-opt bundled with wasm-pack however defaults this
# proposal OFF and fails validation.  We pass --enable-bulk-memory
# explicitly so wasm-opt accepts and optimises the binary correctly.
#
# Alternative: set wasm-opt = false to skip optimisation entirely.
# That produces a larger binary (~10-20%) but avoids the wasm-opt dependency.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O", "--enable-bulk-memory"]
