[package]
name        = "mid-qr-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for mid-qr"

[lib]
crate-type = ["cdylib"]

[features]
default  = ["generate", "decode"]
generate = ["mid-qr-core/generate"]
decode   = ["mid-qr-core/decode"]
debug    = ["dep:console_error_panic_hook"]

[dependencies]
mid-qr-core              = { path = "../mid-qr-core" }
wasm-bindgen             = "0.2"
js-sys                   = "0.3"
serde                    = { version = "1", features = ["derive"] }
serde-wasm-bindgen       = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# ── wasm-opt disabled ─────────────────────────────────────────────────────────
# The wasm-opt binary bundled with wasm-pack is too old to handle the
# WebAssembly proposals that rustc + rxing + encoding_rs emit:
#   • bulk-memory          (memory.fill / memory.copy)
#   • nontrapping-float-to-int  (i32.trunc_sat_f32_s / _u)
# Rather than chasing individual --enable-* flags against an unknown bundled
# version, we disable wasm-opt here and run it explicitly in CI using a
# separately installed binaryen with all required proposals enabled.
# The CI step is in .github/workflows/build-wasm.yml (the "Optimise WASM" step).
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
